--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&family=Red+Hat+Display:wght@500;700;900&family=Rubik&display=swap");
 
 body {
-  font-family: Rubik, sans-serif;
+  font-family: "Rubik", sans-serif;
 }
