--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&family=Red+Hat+Display:wght@500;700;900&display=swap");
 
-h1 {
+* {
   font-family: "Hanken Grotesk", sans-serif;
 }
 
-p {
+.commands {
   font-family: "Red Hat Display", sans-serif;
+  font-style: italic;
+  color: rgb(80, 80, 80);
 }
